--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
